fixed spacing

--- a/bibsonomy-webapp/src/main/webapp/resources/css/goldstandards.less
+++ b/bibsonomy-webapp/src/main/webapp/resources/css/goldstandards.less
@@ -55,6 +55,10 @@
 			li {
 				list-style: none;
 			}
+			
+			a.title {
+				padding-right: 4px;
+			}
 		}
 		
 		.btn-group {
